<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_main_donate"
        android:icon="@drawable/ic_beer"
        android:showAsAction="ifRoom"
        android:title="@string/menu_donate"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_main_beer"
                android:title="@string/menu_beer"/>
            <item
                android:id="@+id/menu_main_beer2"
                android:title="@string/menu_beer2"/>
            <item
                android:id="@+id/menu_main_beer3"
                android:title="@string/menu_beer3"/>
            <item
                android:id="@+id/menu_main_beer4"
                android:title="@string/menu_beer4"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_main_github"
        android:icon="@drawable/ic_github"
        android:showAsAction="always"
        android:title="@string/gitHub"
        app:showAsAction="always"
        tools:ignore="AppCompatResource"/>

</menu>