<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res/com.yeyanxiang.project"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <com.yeyanxiang.view.circleview.CircleLayout
        android:id="@+id/main_circle_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/main_selected_textView"
        android:layout_gravity="center_horizontal"
        circle:firstChildPosition="South"
        circle:isRotating="true"
        circle:rotateToCenter="true" >

        <!-- circle:circleBackground="@drawable/green"  > -->

        <com.yeyanxiang.view.circleview.CircleImageView
            android:id="@+id/main_facebook_image"
            circle:name="@string/facebook"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icon_facebook" />

        <com.yeyanxiang.view.circleview.CircleImageView
            android:id="@+id/main_myspace_image"
            circle:name="@string/myspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_myspace" />

        <com.yeyanxiang.view.circleview.CircleImageView
            android:id="@+id/main_google_image"
            circle:name="@string/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_google" />

        <com.yeyanxiang.view.circleview.CircleImageView
            android:id="@+id/main_linkedin_image"
            circle:name="@string/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_linkedin" />

        <com.yeyanxiang.view.circleview.CircleImageView
            android:id="@+id/main_twitter_image"
            circle:name="@string/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_twitter" />

        <com.yeyanxiang.view.circleview.CircleImageView
            android:id="@+id/main_wordpress_image"
            circle:name="@string/wordpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_wordpress" />
    </com.yeyanxiang.view.circleview.CircleLayout>

    <TextView
        android:id="@+id/main_selected_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

</RelativeLayout>